progress on in class

--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
 
 <head>
     <meta charset=utf-8/>
+
+    <h1> 
+        Intro to HTML and CSS
+    </h1>
+
+    <h3>
+        Jocelyn (she/her)
+    </h3>
+
+    <div id='div1'>
+        <p id='p1'>
+            This is the DOM for this webpage:
+        </p>
+    </div>
+
+    <div is='div2'>
+        <svg width='200' height='100'>
+            <rect width='200' height='100' style='fill:rgb(50, 250, 75); stroke-width: 5; stroke:rgb(0,0,0)' />
+        </svg>
+    </div>
 </head>
 
 
